<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/standard_gap"
    android:layout_marginStart="@dimen/standard_gap"
    android:layout_marginRight="@dimen/standard_gap"
    android:layout_marginEnd="@dimen/standard_gap"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/standard_gap_double"
        android:paddingBottom="@dimen/standard_gap_double"
        android:orientation="vertical"
        >

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/app_name"
            />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/standard_gap"
            android:layout_gravity="center"
            android:src="@drawable/firebase_logo"
            android:contentDescription="@string/cd_firebase_logo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/label_powered_by_firebase"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:autoLink="web"
            android:textStyle="bold"
            android:text="@string/url_firebase"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_gap"
            android:gravity="center"
            android:layout_gravity="center"
            android:autoLink="web"
            android:text="@string/label_open_source"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:autoLink="web"
            android:textStyle="bold"
            android:text="@string/url_open_source"
            />

    </LinearLayout>

</ScrollView>
