<?xml version="1.0" encoding="utf-8"?>
<com.hyperaware.conference.android.view.MutexViewGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vg_mutex"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:padding="@dimen/standard_gap"
    >

    <Button
        android:id="@+id/button_sign_in"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/btn_sign_in"
        />

    <RelativeLayout
        android:id="@+id/vg_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/iv_pic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:scaleType="centerCrop"
            android:src="@drawable/nopic"
            android:contentDescription="@string/cd_your_image"
            />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/iv_pic"
            android:layout_alignBottom="@+id/iv_pic"
            android:layout_toRightOf="@+id/iv_pic"
            android:layout_toEndOf="@+id/iv_pic"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            >

            <Button
                android:id="@+id/button_sign_out"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:text="@string/btn_sign_out"
                />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_gap_half"
            android:layout_below="@+id/iv_pic"
            android:textStyle="bold"
            tools:text="@string/ph_speaker_name"
            />

    </RelativeLayout>

</com.hyperaware.conference.android.view.MutexViewGroup>
