<?xml version="1.0" encoding="utf-8"?>
<com.hyperaware.conference.android.view.MutexViewGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vg_mutex"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/inc_progress_bar"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/screen_horizontal_margin"
            android:paddingRight="@dimen/screen_horizontal_margin"
            android:paddingTop="@dimen/screen_vertical_margin"
            android:paddingBottom="@dimen/screen_vertical_margin"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_gap_half"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="@string/msg_please_rate_session"
                />

            <TextView
                android:id="@+id/tv_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginBottom="@dimen/standard_gap_half"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="@string/ph_session_topic"
                />

            <LinearLayout
                android:id="@+id/vg_speakers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_gap_half"
                android:orientation="vertical"
                >

                <!-- Uncomment for previewing layout -->
                <!--
                <include layout="@layout/inc_feedback_speaker" />
                <include layout="@layout/inc_feedback_speaker" />
                -->

            </LinearLayout>

            <LinearLayout
                android:id="@+id/vg_questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <!-- Uncomment for previewing layout -->
                <!--
                <include layout="@layout/card_feedback_question_text" />
                <include layout="@layout/card_feedback_question_yn" />
                <include layout="@layout/card_feedback_question_rate" />
                -->

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/button_remove_feedback"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_remove_feedback"
                    />

                <Button
                    android:id="@+id/button_send_feedback"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_send_feedback"
                    />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</com.hyperaware.conference.android.view.MutexViewGroup>
